# rocket_chat

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  rocket_server.session.sql
migrations/2023-10-28-134214_create_users/: up.sql
migrations/2023-10-29-110549_create_rooms/: up.sql
migrations/2023-10-29-124159_create_rooms_users/: down.sql  up.sql
migrations/2023-10-29-131630_create_messages/: up.sql
migrations/2023-10-30-181504_create_messages/: up.sql
migrations/2024-05-23-153040_create_email_tokens/: down.sql  up.sql
migrations/2024-05-24-122454_create_admins/: up.sql
migrations/2024-05-28-175719_create_directs/: down.sql  up.sql
migrations/2024-05-28-175743_create_direct_messages/: down.sql  up.sql
migrations/2024-11-28-171224_triggers/: down.sql  up.sql
pages/: chat.html  login.html  signup.html
src/: lib.rs  main.rs  models.rs  schema.rs
static/: chat.css  chat.js  index.html  login.css  login.js  manifest.json  script.js  signup.css  signup.js  style.css
