[package]
name = "rocket_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
sha2 = "0.10.7"
rsa = "0.9.6"
rand = "0.8.5"
base64 = "0.22.0"
chrono = "0.4.34"
rocket-session-store = "0.2.0"
reqwest = { version = "0.12.4", features = ["json"] }
ws = { package = "rocket_ws", version = "0.1.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
